@@ -1,7 +1,8 @@
 eglibc (2.13-15) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
-  * Add testsuite results for s390x.  
+  * Add testsuite results for s390x.
+  * Install x86-64 version of ldd in libc-bin:i386.  Closes: #636947.
 
  -- Aurelien Jarno <aurel32@debian.org>  Fri, 05 Aug 2011 07:46:28 +0200
 
